--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "browserify-import-to-require",
   "version": "0.1.0",
-  "description": "a browserify transform to transfer import statement to require statement",
+  "description": "A browserify transform, transfering static import statement to require statement.",
   "main": "browserify-import-to-require.js",
   "scripts": {
     "test": "mocha"
