--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "browserify-import-to-require",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A browserify transform, transfering static import statement to require statement.",
   "main": "browserify-import-to-require.js",
   "scripts": {
@@ -15,7 +15,8 @@
   "author": "fwg",
   "license": "ISC",
   "dependencies": {
-    "browserify-transform-tools": "^1.7.0"
+    "browserify-transform-tools": "^1.7.0",
+    "static-import-to-require": "^0.1.1"
   },
   "directories": {
     "test": "test"
